--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,21 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Inter:wght@500&display=swap"
+      rel="stylesheet"
+    />
+
+    <meta name="author" content="Andrew Li" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Penguin Bottom Coin Website - The next coin that will go to the moon"
     />
+    <meta
+      name="keywords"
+      content="bottom, penguin coin, crypto, coins, penguin, bottom coin, bottom penguin coin"
+    />
+    <meta property="og:image" content="" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +35,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Bottom Penguin Coin Website</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
