--- a/public/index.html
+++ b/public/index.html
@@ -13,13 +13,13 @@
     <meta name="author" content="Andrew Li" />
     <meta
       name="description"
-      content="Penguin Bottom Coin Website - The next coin that will go to the moon"
+      content="Penguin Bottom Coin Website - The next coin that will go to the moon 🚀"
     />
     <meta
       name="keywords"
       content="bottom, penguin coin, crypto, coins, penguin, bottom coin, bottom penguin coin"
     />
-    <meta property="og:image" content="" />
+    <meta property="og:image" content="%PUBLIC_URL%/bottom-penguin.png" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -35,7 +35,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Bottom Penguin Coin Website</title>
+    <title>Bottom Penguin Coin Website 💰</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
